# ihl-messenger-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: android.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
